<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="custom">Custom</string>
    <string name="tip_percent">Tip %:</string>
    <string name="tip">Tip:</string>
    <string name="bill_total">Bill Total:</string>
    <string name="enter_bill_total">Enter Bill Total</string>
    <string name="_50">50%</string>
    <string name="total">Total:</string>
    <string name="exit">Exit</string>
    <string name="_20">20%</string>
</resources>